--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@ iframe {
 
 .wrap-contact3 {
   width: 500px;
-  background: #80c64a;
+  background: #a2b593;
   background: -webkit-linear-gradient(45deg, #56ab2f, #a8e063);
   background: -o-linear-gradient(45deg, #56ab2f, #a8e063);
   background: -moz-linear-gradient(45deg, #56ab2f, #a8e063);
